cmake_minimum_required(VERSION 3.8)
project(libmodel3d)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_FLAGS "${CMAKE_C_FLAGS} -std=c++0x -Wall -ggdb3")
set(LIB_SOURCE_FILES matrix.cpp)
add_library(my_lib STATIC ${LIB_SOURCE_FILES})
add_executable(prog begin.cpp)
target_link_libraries(prog my_lib)
find_package(GTest REQUIRED)
include_directories(${GTEST_INCLUDE_DIRS})
message(${GTEST_LIBRARIES})
add_executable(tests tests.cpp)
target_link_libraries(tests ${GTEST_LIBRARIES} -lpthread)
target_link_libraries(tests my_lib)